# softwareTesting

./: .clang-format  LICENSE  README.md  meson.build
src/: conjugateGradient.cpp  conjugateGradient.hpp  matrix.cpp  matrix.hpp  meson.build  vector.cpp  vector.hpp
tests/: meson.build
tests/integrationTests/: conjugateGradientTest.cpp  matrixVectorMultiplicationTest.cpp  meson.build
tests/systemTest/: heatEquationTest.cpp  meson.build
tests/unitTests/: conjugateGradientTest.cpp  meson.build  scalarMatrixMultiplicationTest.cpp  scalarVectorMultiplicationTest.cpp  setMatrixValuesTest.cpp  setVectorValuesTest.cpp  vectorAdditionTest.cpp  vectorSubtractionTest.cpp  vectorVectorMultiplicationTest.cpp
