# basic project settings, used each time when we configure a project
project(
  'softwareTesting',
  'cpp',
  default_options: ['cpp_std=c++14', 'b_coverage=true'],
  version: '0.3.6',
  license: 'MIT'
)

# collect cpp files in source sub-directory
subdir('src/')

# collect cpp files in test sub-directory
subdir('tests/')
