# vector tests

setVectorValuesTest = executable(
  'setVectorValuesTest',
  'setVectorValuesTest.cpp',
  link_with: linear_algebra_lib,
  include_directories: root
)
test('unit test: set vector values', setVectorValuesTest)

scalarVectorMultiplicationTest = executable(
  'scalarVectorMultiplicationTest',
  'scalarVectorMultiplicationTest.cpp',
  link_with: linear_algebra_lib,
  include_directories: root
)
test('unit test: scalar vector multiplication', scalarVectorMultiplicationTest)

vectorVectorMultiplicationTest = executable(
  'vectorVectorMultiplicationTest',
  'vectorVectorMultiplicationTest.cpp',
  link_with: linear_algebra_lib,
  include_directories: root
)
test('unit test: vector vector multiplication', vectorVectorMultiplicationTest)

vectorAdditionTest = executable(
  'vectorAdditionTest',
  'vectorAdditionTest.cpp',
  link_with: linear_algebra_lib,
  include_directories: root
)
test('unit test: vector addition', vectorAdditionTest)

vectorSubtractionTest = executable(
  'vectorSubtractionTest',
  'vectorSubtractionTest.cpp',
  link_with: linear_algebra_lib,
  include_directories: root
)
test('unit test: vector subtraction', vectorSubtractionTest)

# matrix tests

setMatrixValuesTest = executable(
  'setMatrixValuesTest',
  'setMatrixValuesTest.cpp',
  link_with: linear_algebra_lib,
  include_directories: root
)
test('unit test: set matrix values', setMatrixValuesTest)

scalarMatrixMultiplicationTest = executable(
  'scalarMatrixMultiplicationTest',
  'scalarMatrixMultiplicationTest.cpp',
  link_with: linear_algebra_lib,
  include_directories: root
)
test('unit test: scalar matrix multiplication', scalarMatrixMultiplicationTest)